--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ a{
     background: radial-gradient(circle at 50% 50%, rgba(255, 255, 255, 1) 0%, rgba(255, 242, 242, 1) 100%);
 }
 .gradient__text {
-    background: var(--gradient-text);
+    background: var(--color-text);
     background-clip: text;
     -webkit-background-clop: text;
     -webkit-text-fill-color:transparent; 
